For the latest news, visit the Linux Cafe at the PegaSoft web site. 

SparForte 1.4's focus was on REST, DB, OpenGL

KNOWN BUGS

- integer type casting is not working on parameters
- freebsd rounding of 2.5 fails because freebsd rounds down instead of up (FreeBSD Ada bug??)

CHANGES SINCE 1.3

1. New: RPM spec for Red Hat builds.

2. Fix: numerics.even no longer requires extra parenthesis.

3. Fix: numerics.hash_of, sdbm_hash_of, fnv_hash_of, murmur_hash_of no longer
throw an exception on a number instead of a string as the first parameter.

4. Fix: FreeBSD 9 support.

5. Fix: AdaVox discriminant error on newer Ada compilers corrected.

6. Fix: EINTR handling on one line was for 64-bit now works with 32-bit also.

7. New: started pen OpenGL capabilities by defining OpenGL constants.

8. Fix: boolean shortcut no longer runs on lines that are not executing
[check].
