@@ -115,15 +115,20 @@
 	can get your name below like these other fine people.</p>
 
 	<h4>Credits</h4>
-	<p>Ken Burtch<br>
-	Warren W. Gay<br>
-	David Wheeler<br></p>
+	<p>Ken O. Burtch<br>
+	Buz Cory<br>
+	John Cusick<br>
+	Rob Vissers<br>
+	Thierry Thomas</p>
 
 	<h4>Thank You's</h4>
 	<p>Chris Browne<br>
 	Chris F. A. Johnson<br>
-	Phil Snelgrove<br>
+	David A. Wheeler<br>
 	Mel Wilson<br>
+	Oleksandr Havva<br>
+	Phil Snelgrove<br>
+	Warren W. Gay<br>
 	Ada Core Technologies</p>
 
 			</td>
