@@ -632,7 +632,7 @@ arrays.to_array( a, s ); -- a(1) is 32</span></td>
 </tr><tr>
 <td><p class="pkg_label">Example</p></td>
 <td><span class="code">a : array(1..1) of string := "apple";<br>
-arrays.to_json( s, a ); -- s is ["apple]"</span></td>
+arrays.to_json( s, a ); -- s is ["apple"]</span></td>
 </tr><tr>
 <td><p class="pkg_label">Parameters</p></td>
 <td><table CELLSPACING=0 CELLPADDING=0 WIDTH="100%" border="0" >
