@@ -581,7 +581,7 @@ equal to Y.</p></td>
 </tr><tr>
 <td><p class="pkg_label">Example</p></td>
 <td><span class="code">f1 := numerics.ceiling( 5.5 ); -- returns 6<br>
-f2 := numerics.ceiling( -5.5 ); -- returns 5</span></p>
+f2 := numerics.ceiling( -5.5 ); -- returns -5</span></p>
 </tr><tr>
 <td><p class="pkg_label">Parameters</p></td>
 <td><table CELLSPACING=0 CELLPADDING=0 WIDTH="100%" NOSAVE border="0" >
@@ -1004,7 +1004,7 @@ has the sign of X; a zero result otherwise has a positive sign</p></td>
 </tr><tr>
 <td><p class="pkg_label">Example</p></td>
 <td><span class="code">f1 := numerics.floor( 5.5 ); -- returns 5<br>
-f2 := numerics.floor( -5.5 ); -- returns 6</span></p>
+f2 := numerics.floor( -5.5 ); -- returns -6</span></p>
 </tr><tr>
 <td><p class="pkg_label">Parameters</p></td>
 <td><table CELLSPACING=0 CELLPADDING=0 WIDTH="100%" NOSAVE border="0" >
